--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
+  --background: #FFFFFF;
   --foreground: #171717;
 }
 
@@ -20,7 +20,9 @@
 }
 
 body {
-  background: var(--background);
+  @apply bg-cover bg-center bg-no-repeat;
+  background-image: url('@/public/bird.png');
+  background-attachment: fixed;
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
