--- a/app/globals.css
+++ b/app/globals.css
@@ -21,7 +21,7 @@
 
 body {
   @apply bg-cover bg-center bg-no-repeat;
-  background-image: url('@/public/bird.png');
+  background-image: url('public/bird.png');
   background-attachment: fixed;
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
